--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "suburi",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "3.5",
+    "actioncable": "^5.2.1",
+    "bootstrap": "4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
