--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -6,3 +6,8 @@ redis:
   port: 6379
   db: 0
   namespace: <%= [Rails.application.class.parent_name, Rails.env].join(':') %>
+client:
+  host: http://localhost:3000
+  timeout: 5
+  retry_max: 0
+  retry_interval: 1
