--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,10 @@ jobs:
 
     docker:
       - image: circleci/ruby:2.5.1-node
-      - image: circleci/mysql:5.7-ram
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
+      - image: circleci/postgres:9.6.2-alpine
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-          MYSQL_ROOT_PASSWORD: ''
+          POSTGRES_USER: root
+          POSTGRES_DB: suburi_test
       - image: redis
 
     steps:
