--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,11 @@ jobs:
 
     docker:
       - image: circleci/ruby:2.5.1-node
-      - image: circleci/postgres:9.6.2-alpine
+      - image: circleci/mysql:8-ram
+        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
         environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: suburi_test
+          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_ROOT_PASSWORD: ''
       - image: redis
 
     steps:
@@ -50,7 +51,7 @@ jobs:
 
       - run:
           name: Wait for DB
-          command: dockerize -wait tcp://127.0.0.1:5432 -timeout 120s
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
 
       - run:
           name: create test DB
