--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,8 @@ jobs:
 
     docker:
       - image: circleci/ruby:2.5.1-node
-      - image: circleci/mysql:8-ram
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-large-prefix=true --innodb-file-format=Barracuda
+      - image: circleci/mysql:8.0.12
+        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-file-format=Barracuda --default-authentication-plugin=mysql_native_password
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
           MYSQL_ROOT_PASSWORD: ''
