--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.5.1-node
       - image: circleci/mysql:8.0.12
-        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --innodb-file-format=Barracuda --default-authentication-plugin=mysql_native_password
+        command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_bin --default-authentication-plugin=mysql_native_password
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
           MYSQL_ROOT_PASSWORD: ''
