--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,10 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 
-/public/packs
-/public/packs-test
+public/system
+public/assets
+public/packs
+public/packs-test
 /node_modules
 yarn-debug.log*
 .yarn-integrity
