--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "suburi",
   "private": true,
   "dependencies": {
+    "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
-    "@rails/activestorage": "^6.0.0-alpha"
+    "@rails/webpacker": "^4.0.2",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.10"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3.3.1"
+  }
 }
