--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,5 +70,8 @@ jobs:
       - run:
           name: run test
           command: bundle exec rspec --exclude-pattern "spec/integration/**/*_spec.rb"
+      - store_test_results:
+          path: /tmp/test-results
       - store_artifacts:
-          path: coverage
+          path: /tmp/test-results
+          destination: test-results
