--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           name: run test
           command: bundle exec rspec --exclude-pattern "spec/integration/**/*_spec.rb"
       - store_test_results:
-          path: /tmp/test-results
+          path: ~/circleci-suburi/coverage
       - store_artifacts:
-          path: /tmp/test-results
-          destination: test-results
+          path: ~/circleci-suburi/coverage
+          destination: coverage
