--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
       only:
         - master
 
+    environment:
+      CIRCLE_ARTIFACTS: ~/circleci-suburi/coverage
+
     docker:
       - image: circleci/ruby:2.6.3-node
       - image: circleci/mysql:8.0.12
