--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,13 @@ jobs:
             bin/rails db:create
             bin/rails db:setup
 
+      - run: mkdir ~/rspec
+
       - run:
           name: run test
-          command: bundle exec rspec --exclude-pattern "spec/integration/**/*_spec.rb"
+          command: bundle exec rspec --format progress --format RspecJunitFormatter -o ~/rspec/rspec.xml --exclude-pattern "spec/integration/**/*_spec.rb"
+          when: always
+
+      - store_test_results:
+          path: ~/rspec
+
