--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,8 @@ jobs:
           paths:
             - ~/.cache/yarn
 
+      - run: bundle exec brakeman -z
+
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
@@ -80,3 +82,4 @@ jobs:
 
       - store_artifacts:
           path: coverage
+          destination: coverage
