--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -1,6 +1,6 @@
 test:
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: 127.0.0.1
   username: root
