--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,5 @@
+orbs:
+  git-shallow-clone: guitarrapc/git-shallow-clone@2.0.3
 version: 2
 jobs:
   build:
@@ -19,7 +21,7 @@ jobs:
 
     steps:
 
-      - checkout
+      - git-shallow-clone/checkout
 
       - run:
           name: Install system dependencies
