--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,5 @@
 orbs:
-  git: ganta/git@1.2.0
+  jq: circleci/jq@2.0.0
 version: 2.1
 jobs:
   build:
@@ -17,7 +17,9 @@ jobs:
 
     steps:
 
-      - ganta-git/shallow-clone-checkout
+      - checkout
+
+      - jq/install
 
       - run:
           name: Install system dependencies
