--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
-version: 2.1
-orbs:
-  git-shallow-clone: guitarrapc/git-shallow-clone@2.0.3
+version: 2
 jobs:
   build:
     parallelism: 1
     working_directory: ~/circleci-suburi
+
+    branches:
+      only:
+        - master
 
     docker:
       - image: circleci/ruby:2.6.3-node
