--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,10 @@
-version: 2
+version: 2.1
+orbs:
+  git-shallow-clone: guitarrapc/git-shallow-clone@2.0.3
 jobs:
   build:
     parallelism: 1
     working_directory: ~/circleci-suburi
-
-    branches:
-      only:
-        - master
 
     docker:
       - image: circleci/ruby:2.6.3-node
@@ -19,7 +17,7 @@ jobs:
 
     steps:
 
-      - checkout
+      - git-shallow-clone/checkout
 
       - run:
           name: Install system dependencies
