--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,3 +89,13 @@ jobs:
       - store_artifacts:
           path: coverage
           destination: coverage
+
+workflows:
+  version: 2
+  build-and-test:
+    jobs:
+      - build:
+        filters:
+          branches:
+            only:
+              - master
