--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,11 @@ jobs:
       - ganta-git/shallow-clone-checkout
 
       - run:
+          name: Submodule Pull
+          command: |
+            git submodule update --init --recursive
+
+      - run:
           name: Install system dependencies
           command: |
             gem install bundler -v 2.0.1
