--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,9 @@ executors:
 
 jobs:
   build:
-    executor: default
+    executor:
+      name: default
+
     steps:
       - ganta-git/shallow-clone-checkout
 
@@ -85,15 +87,15 @@ jobs:
             mkdir /tmp/test-results
             bundle exec rspec --profile 10 --format documentation --out /tmp/test-results/rspec.log --format progress
 
-    - store_test_results:
+      - store_test_results:
           path: /tmp/test-results
 
-    - store_artifacts:
-        path: coverage
-        destination: coverage
+      - store_artifacts:
+          path: coverage
+          destination: coverage
 
-    - store_artifacts:
-        path: swagger-ui/dist
+      - store_artifacts:
+          path: swagger-ui/dist
 
 workflows:
   version: 2
