--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
       - ganta-git/shallow-clone-checkout
 
       - run:
+          name: bundler install
+          command: |
+            gem install bundler
+
+      - run:
           command: bundle -v
       - restore_cache:
           keys:
