--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,11 +24,19 @@ executors:
 
 jobs:
   build:
+    parallelism: 3
+
     executor:
       name: default
 
     steps:
       - ganta-git/shallow-clone-checkout
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - save_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/app
 
       - run:
           name: bundler install
@@ -90,7 +98,8 @@ jobs:
           name: run test
           command: |
             mkdir /tmp/test-results
-            bundle exec rspec --profile 10 --format documentation --out /tmp/test-results/rspec.log --format progress
+            TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=filesize)
+            bundle exec rspec $TESTFILES --profile 10 --format documentation --out /tmp/test-results/rspec.log --format progress
 
       - store_test_results:
           path: /tmp/test-results
