--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,12 +97,12 @@ jobs:
       - run:
           name: run test
           command: |
-            mkdir /tmp/test-results
+            mkdir test-results
             TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=filesize)
-            bundle exec rspec $TESTFILES --profile 10 --format documentation --out /tmp/test-results/rspec.log --format progress
+            bundle exec rspec $TESTFILES --profile 10 --format documentation --out test-results/rspec.log --format progress
 
       - store_test_results:
-          path: /tmp/test-results
+          path: ~/app/test-results
 
       - store_artifacts:
           path: coverage
