--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,25 +24,20 @@ executors:
 
 jobs:
   build:
-    parallelism: 3
-
     executor:
       name: default
-
     steps:
+      # source
       - ganta-git/shallow-clone-checkout
-      - restore_cache:
-          key: repo-{{ .Environment.CIRCLE_SHA1 }}
       - save_cache:
           key: repo-{{ .Environment.CIRCLE_SHA1 }}
           paths:
             - ~/app
-
+      # bundle
       - run:
           name: bundler install
           command: |
             gem install bundler
-
       - run:
           command: bundle -v
       - restore_cache:
@@ -56,7 +51,7 @@ jobs:
           key: bundle-v2-cache-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
-
+      # yarn
       - restore_cache:
           keys:
             - yarn-cache-{{ checksum "yarn.lock" }}
@@ -68,11 +63,67 @@ jobs:
           key: yarn-cache-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
-
+  rubocop:
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
+      - run:
+          name: RuboCop
+          command: bundle exec rubocop
+  brakeman:
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
       - run:
           name: A static analysis security
           command: bundle exec brakeman -z
-
+  precompile:
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
+      - run:
+          name: Precompile assets
+          command: bundle exec rake assets:precompile
+  tbls:
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
@@ -82,37 +133,82 @@ jobs:
             mv config/database.ci.yml config/database.yml
             bin/rails db:create
             bin/rails db:setup
-
       - run:
           name: Install tbls
           command: |
             curl -sL https://git.io/use-tbls > use-tbls.tmp && . ./use-tbls.tmp && rm ./use-tbls.tmp
             tbls diff my://root@127.0.0.1:3306/suburi_test
-
+  swagger:
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
       - run:
           name: Generate swagger ui
           command: |
             ruby bin/swagger.rb
-
+      - store_artifacts:
+          path: swagger-ui/dist
+  test:
+    parallelism: 3
+    executor:
+      name: default
+    steps:
+      - restore_cache:
+          key: repo-{{ .Environment.CIRCLE_SHA1 }}
+      - restore_cache:
+          keys:
+            - bundle-v2-cache-{{ checksum "Gemfile.lock" }}
+            - bundle-v2-cache-
+      - run:
+          name: Bundle Install
+          command: bundle check || bundle install
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
+      - run:
+          name: create test DB
+          command: |
+            mv config/database.ci.yml config/database.yml
+            bin/rails db:create
+            bin/rails db:setup
       - run:
           name: run test
           command: |
             mkdir /tmp/test-results
             TESTFILES=$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=filesize)
             bundle exec rspec $TESTFILES --profile 10 --format RspecJunitFormatter --out /tmp/test-results/rspec.xml --format progress
-
       - store_test_results:
           path: /tmp/test-results
-
       - store_artifacts:
           path: coverage
           destination: coverage
-
-      - store_artifacts:
-          path: swagger-ui/dist
 
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
+      - rubocop:
+          requires:
+            - build
+      - brakeman:
+          requires:
+            - build
+      - tbls:
+          requires:
+            - build
+      - swagger:
+          requires:
+            - build
+      - test:
+          requires:
+            - build
