--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,13 @@ jobs:
           name: Install tbls
           command: |
             curl -sL https://git.io/use-tbls > use-tbls.tmp && . ./use-tbls.tmp && rm ./use-tbls.tmp
+      - run:
+          name: tbls version
+          command: |
+            tbls version
+      - run:
+          name: tbls diff
+          command: |
             tbls diff my://root@127.0.0.1:3306/suburi_test
   swagger:
     executor:
