--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,8 @@ jobs:
           command: |
             git add doc/schema
             git commit -m "AUTO COMMIT tbls"
+            git config user.email "username@mydomain.com"
+            git config user.name "My Name"
             git push origin ${CIRCLE_BRANCH}
           when: on_fail
   swagger:
