--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -131,6 +131,7 @@ jobs:
             git config user.email "username@mydomain.com"
             git config user.name "My Name"
             echo `git status`
+            echo `tbls version`
             git add doc/schema
             git commit -m "AUTO COMMIT tbls"
             git push origin ${CIRCLE_BRANCH}
